# monty

./: .gitignore  AGENTS.md  README.md  VISION.md  dune  dune-project  install.sh
.pi/agents/: monty-headless-reviewer.md  monty-headless-worker.md
dune.lock/: bos.pkg  cmdliner.pkg  lock.dune  logs.pkg  ocaml-base-compiler.pkg
lib/: cli.ml  doctor.ml  done.ml  dune  external_metadata.ml  ghostty.ml  head_butler.ml  headless.ml  home.ml  job.ml  job_store.ml  launcher.ml  list_jobs.ml  manifest.ml  overview_render.ml  overview_types.ml  pi_bridge.ml  pi_command.ml  process.ml  project_overview.ml  project_storage.ml  reconciliation.ml  resume.ml  shell.ml  slug.ml  state_path.ml  state_store.ml  task_storage.ml  terminal.ml  worker_memory.ml  wt.ml
pi-extension/: core.js  navigation-spinner.js  package.json  subagent-chain.js  worker-view.js
pi-extension/extensions/: monty.js
test/: dune  test_cli_e2e.ml  test_install.sh  test_monty.ml  test_pi_extension.mjs
